// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLayout > renders condensed layout 1`] = `
<div>
  <div
    class="prc-PageLayout-PageLayoutRoot-1zlEO"
    style="--spacing: var(--spacing-condensed);"
  >
    <div
      class="prc-PageLayout-PageLayoutWrapper-s2ao4"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-Header-mQXK1"
        data-hidden="false"
        style="--spacing: var(--spacing-condensed);"
      >
        <div
          class="prc-PageLayout-HeaderContent-dVIQb"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-HeaderHorizontalDivider-bofyb"
          data-variant="none"
          style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
        />
      </header>
      <div
        class="prc-PageLayout-PageLayoutContent-jzDMn"
      >
        <main
          class="prc-PageLayout-ContentWrapper-b-QRo"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-Content--F7-I"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-PaneWrapper-nGO0U"
          data-is-hidden="false"
          data-position="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-condensed); --spacing-column: var(--spacing-condensed);"
        >
          <div
            class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-PaneHorizontalDivider-4exOb"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
          />
          <div
            class="prc-PageLayout-Pane-Vl5LI"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-VerticalDivider-4A4Qm prc-PageLayout-PaneVerticalDivider-1c9vy"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing: var(--spacing-condensed);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-FooterWrapper-WZwgZ"
        data-hidden="false"
        style="--spacing: var(--spacing-condensed);"
      >
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-FooterHorizontalDivider-sNLmj"
          data-variant="none"
          style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
        />
        <div
          class="prc-PageLayout-FooterContent-UFWGW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout > renders default layout 1`] = `
<div>
  <div
    class="prc-PageLayout-PageLayoutRoot-1zlEO"
    style="--spacing: var(--spacing-normal);"
  >
    <div
      class="prc-PageLayout-PageLayoutWrapper-s2ao4"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-Header-mQXK1"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-HeaderContent-dVIQb"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-HeaderHorizontalDivider-bofyb"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="prc-PageLayout-PageLayoutContent-jzDMn"
      >
        <main
          class="prc-PageLayout-ContentWrapper-b-QRo"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-Content--F7-I"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-PaneWrapper-nGO0U"
          data-is-hidden="false"
          data-position="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-PaneHorizontalDivider-4exOb"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="prc-PageLayout-Pane-Vl5LI"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-VerticalDivider-4A4Qm prc-PageLayout-PaneVerticalDivider-1c9vy"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-FooterWrapper-WZwgZ"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-FooterHorizontalDivider-sNLmj"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="prc-PageLayout-FooterContent-UFWGW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout > renders pane in different position when narrow 1`] = `
<div>
  <div
    class="prc-PageLayout-PageLayoutRoot-1zlEO"
    style="--spacing: var(--spacing-normal);"
  >
    <div
      class="prc-PageLayout-PageLayoutWrapper-s2ao4"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-Header-mQXK1"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-HeaderContent-dVIQb"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-HeaderHorizontalDivider-bofyb"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="prc-PageLayout-PageLayoutContent-jzDMn"
      >
        <main
          class="prc-PageLayout-ContentWrapper-b-QRo"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-Content--F7-I"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-PaneWrapper-nGO0U"
          data-is-hidden="false"
          data-position-narrow="start"
          data-position-regular="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-PaneHorizontalDivider-4exOb"
            data-position-narrow="start"
            data-position-regular="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="prc-PageLayout-Pane-Vl5LI"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-VerticalDivider-4A4Qm prc-PageLayout-PaneVerticalDivider-1c9vy"
            data-position-narrow="start"
            data-position-regular="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-FooterWrapper-WZwgZ"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-FooterHorizontalDivider-sNLmj"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="prc-PageLayout-FooterContent-UFWGW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout > renders with dividers 1`] = `
<div>
  <div
    class="prc-PageLayout-PageLayoutRoot-1zlEO"
    style="--spacing: var(--spacing-normal);"
  >
    <div
      class="prc-PageLayout-PageLayoutWrapper-s2ao4"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-Header-mQXK1"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-HeaderContent-dVIQb"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-HeaderHorizontalDivider-bofyb"
          data-variant-narrow="filled"
          data-variant-regular="line"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="prc-PageLayout-PageLayoutContent-jzDMn"
      >
        <main
          class="prc-PageLayout-ContentWrapper-b-QRo"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-Content--F7-I"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-PaneWrapper-nGO0U"
          data-is-hidden="false"
          data-position="start"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-PaneHorizontalDivider-4exOb"
            data-position="start"
            data-variant-narrow="filled"
            data-variant-regular="line"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="prc-PageLayout-Pane-Vl5LI"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-VerticalDivider-4A4Qm prc-PageLayout-PaneVerticalDivider-1c9vy"
            data-position="start"
            data-variant-narrow="none"
            data-variant-regular="line"
            data-variant-wide="line"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-FooterWrapper-WZwgZ"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-HorizontalDivider-CYLp5 prc-PageLayout-FooterHorizontalDivider-sNLmj"
          data-variant-narrow="line"
          data-variant-regular="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="prc-PageLayout-FooterContent-UFWGW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;
